DT-37 Fix: spacing on header, added icon for settings

--- a/src/app/modules/core/components/main-nav/main-nav.component.scss
+++ b/src/app/modules/core/components/main-nav/main-nav.component.scss
@@ -1,12 +1,15 @@
 @import "~assets/styles/variables";
 
 .header-nav {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  display: flex;
   align-items: center;
-  gap: 20px;
+  list-style-type: none;
+
+  li:not(li:last-child) {
+    margin-right: 20px;
+  }
 
   a {
     color: $font-color-primary;
